# ASSIGNMENT_BLOG_SYSTEM

./: .env.example  README.md  api_design.md  db_design.md  docker-compose.yml  feature_list.md  screen_flow.md
backend/: dockerfile  pyproject.toml  syft-back.json
backend/src/: core.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py
backend/src/routers/: articles.py  auth.py  users.py
docs/: screen_flow.md
frontend/: Dockerfile  index.html  package.json  syft-front.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: ArticleDetailPage.tsx  CreateArticlePage.tsx  EditArticlePage.tsx  HomePage.tsx  LoginPage.tsx  SignUpPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
